website: Style tweaks.
- Give <h[123]> a margin-bottom equal to <p> and a larger margin-top.

  This sets them apart from the previous section but not the section they are
  leading.

- Give the article list on category index pages alternating backgrounds, and
  remove the on-hover background color.

- Various minor tweaks.

--- a/website/template.html
+++ b/website/template.html
@@ -187,14 +187,18 @@
       <ul class="article-list">
         {{ range $article := $group.Articles }}
           <li>
-            <a href="{{ rootURL }}/{{ $category }}/{{ $article.Name }}.html"
-               class="article-link">{{ $article.Title }}</a>
-            {{ if $article.Note }}
-              &mdash; {{ $article.Note }}
-            {{ end }}
-            <span class="article-timestamp">
-              {{ $article.Timestamp }}
-            </span>
+            <div class="li-content">
+              <header>
+                <a href="{{ rootURL }}/{{ $category }}/{{ $article.Name }}.html"
+                   class="article-link">{{ $article.Title }}</a>
+                {{ if $article.Note }}
+                  &mdash; {{ $article.Note }}
+                {{ end }}
+              </header>
+              <time>
+                {{ $article.Timestamp }}
+              </time>
+            </div>
           </li>
         {{ end }}
       </ul>
