website: Fix canonical link for article pages.

--- a/website/template.html
+++ b/website/template.html
@@ -11,7 +11,7 @@
   {{- else if is "category" -}}
     <link rel="canonical" href="{{ .RootURL }}/{{ .Category }}/">
   {{- else -}}
-    <link rel="canonical" href="{{ .RootURL }}/{{ .Category }}/{{ .Name }}">
+    <link rel="canonical" href="{{ .RootURL }}/{{ .Category }}/{{ .Name }}.html">
   {{- end }}
 
   <title>
