website: Add sponsor page, linked from nav bar and homepage.

--- a/website/template.html
+++ b/website/template.html
@@ -85,7 +85,7 @@
           <li>
             <a href="{{ rootURL }}/{{ $info.Name }}/"
                class="{{ if eq $curcat $info.Name}}current{{ end }}">
-              {{ $info.Name }}
+              {{ or $info.NavHTML $info.Name }}
             </a>
           </li>
         {{ end }}
